fixed colors and spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,122 +1,173 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-#content{
-    max-width: 1600px;
-    margin: 0 auto;
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #FFBA45   ;
+    --secondary-color: #00AC95 ;
+    --accent1-color: #bbc0c9;
+    --accent2-color: white;
+    --accent3-color: black;
+    --accent4-color: #114393;
+    --accent5-color: #1a2e4f;
+  
+    /* change the values below to your chosen font(s) */
+    --heading-font: "Ubuntu", sans-serif;
+    --paragraph-font: 'Arial', sans-serif;
+  
+    /* these colors below should be chosen from among your palette colors above */
+    --headline-color-on-white: rgb(0, 0, 0);  /* headlines on a white background */ 
+    --headline-color-on-color: rgb(0, 0, 0); /* headlines on a colored background */ 
+    --paragraph-color-on-white: rgb(0, 0, 0); /* paragraph text on a white background */ 
+    --paragraph-color-on-color: rgb(0, 0, 0); /* paragraph text on a colored background */ 
+    --paragraph-background-color: #FFFFFF  ;
+    --nav-link-color: var(--accent1-color);
+    --nav-background-color: var(--accent5-color);
+    --nav-hover-link-color:  var(--accent1-color);
+    --nav-hover-background-color: var(--accent4-color);
 }
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-}
-.button-box{
-    text-align: center;
-    color: #DF4B4B;
-}
-main section{
-    text-align: center;
-}
-#background{
-    height: 725px;
-}
+
 body{
     background-color: white;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
+    font-family: var(--paragraph-font);
     font-size: 22px;
     margin: 0;
     padding: 0;
 }
+h4{
+    color: black;
+    font-family: var(--heading-font);
+}
+
+#content{
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
 header{
-    background-color: #CACEC3;
+    background-color: var(--accent5-color);
 }
-nav a:hover{
-    background-color: #f6e5c8;
-    color: #00AC95;
-    padding: 35px;
+#logo_link{
+    padding-top: 5px;
 }
-.card-img{
-    border: black, 10px, solid;
+.logo, .icon{
+    width: 80px;
+}
+.icon{
+    padding-top: 10px;
+}
+nav {
+    background-color: var(--nav-background-color);
 }
 nav a{
     text-align: center;
-    color: #708090;
+    color: var(--nav-link-color);
     text-decoration: none;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
+    padding: 35px;
 }
-.home-title{
-    color: #DF4B4B;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-    font-size: 2.5em;
-    margin-top: 10px;
-}
-h4{
-    color: black;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-}
-.book:hover, .join:hover{
-    color: #00ac95;
-}
-.book, .join{
-    color: #00ac95;
-    text-decoration: none;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-    font-size: x-large;
-    padding: 15px, 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.msg h2{
-    color: black;
-font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-line-height: 1.5em;
-margin: 0;
-padding: 35px;
-}
-.msg p{
-    color: black;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-    line-height: 1.5em;
-    padding-bottom: 15px;
-
-}
-footer{
-    color: #1a2e4f;
-    font-size: 1.2em;
-    background-color: #1a2e4f;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-    padding: 25px, 50px;
-    margin-top: 200px;
-}
-footer a{
-    color: #FFBA45;
-    text-decoration: none;
-    font-family: 'Ubuntu', sans-serif, 'Arial', Helvetica, sans-serif;
-    font-size: medium;
-}
-footer a:hover{
-    color: #FFBA45;
-}
-footer p{
-    color: rgb(160, 166, 175);
-}
-footer p a:hover{
-    text-decoration: underline;
-}
-.logo{
-    width: 150px;
-    padding-top: 5px;
-}
-.icon{
-    width: 80px;
-    padding-top: 10px;
+nav a:hover{
+    background-color: var(--nav-hover-background-color);
+    color: var(--nav-hover-link-color);
 }
 #hero-img{
     width: 100%;
     max-width: 1600px;
     height: auto;
 }
-.social img{
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+}
+
+.home-title{
+    color: #DF4B4B;
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.button-box{
+    text-align: center;
+    color: #DF4B4B;
+}
+
+.book, .join{
+    background-color: var(--nav-background-color);
+    color: var(--nav-link-color);
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.book:hover, .join:hover{
+    background-color: var(--nav-hover-background-color);
+    color: var(--nav-hover-link-color);
+}
+
+main section{
+    text-align: center;
+}
+main section img{
+    box-sizing: border-box;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+.card-img{
+    border: 10px solid var(--accent4-color);
+    width: 30%;
+}
+
+#background{
+    height: 725px;
+    background-color: #617676;
+}
+.mountains{
+    margin: 100px 0;
+    width: 50%;
+}
+
+.msg {
+    line-height: 1.5em;
+    padding: 35px;
+}
+.msg h2{
+    color: black;
+font-family: var(--heading-font);
+line-height: 1.5em;
+margin: 0;
+}
+.msg p{
+    font-size: .8em;
+    color: black;
+    line-height: 1.5em;
+    padding-bottom: 15px;
+}
+
+
+footer{
+    color: #1a2e4f;
+    font-size: 1.2em;
+    background-color: #1a2e4f;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+footer a{
+    color: #FFBA45;
+    text-decoration: none;
+    font-size: medium;
+}
+footer a:hover{
+    color: #FFBA45;
+}
+footer p{
+    color: var(--accent1-color);
+}
+footer p a:hover{
+    text-decoration: underline;
+}
+footer .social img{
     width: 90px;
     height: auto;
     padding-top: 15px;
-}
-#background{
-    background-color: #617676;
 }
